splitted some code into smaller methods and shifted laylout